Fix history tooltip alignment

--- a/index.html
+++ b/index.html
@@ -1794,7 +1794,7 @@
     .history-panel__chart-point:focus-visible .history-panel__chart-point-summary-ring,
     .history-panel__chart-point:hover .history-panel__chart-point-summary-ring{ opacity:1; }
     .history-panel__chart-point:focus-visible{ outline:none; }
-    .history-panel__chart-tooltip{ position:fixed; top:0; left:0; transform:translate(-50%, calc(-100% - 12px)); background:#0f172a; color:#fff; border-radius:.75rem; padding:.55rem .75rem; font-size:.75rem; line-height:1.4; box-shadow:0 12px 28px rgba(15,23,42,0.24); pointer-events:none; opacity:0; transition:opacity .15s ease, transform .15s ease; z-index:120; min-width:9rem; }
+    .history-panel__chart-tooltip{ position:absolute; top:0; left:0; transform:translate(-50%, calc(-100% - 12px)); background:#0f172a; color:#fff; border-radius:.75rem; padding:.55rem .75rem; font-size:.75rem; line-height:1.4; box-shadow:0 12px 28px rgba(15,23,42,0.24); pointer-events:none; opacity:0; transition:opacity .15s ease, transform .15s ease; z-index:120; min-width:9rem; }
     .history-panel__chart-tooltip.is-visible{ opacity:1; transform:translate(-50%, calc(-100% - 18px)); }
     .history-panel__chart-tooltip[data-position="below"]{ transform:translate(-50%, 12px); }
     .history-panel__chart-tooltip[data-position="below"].is-visible{ transform:translate(-50%, 18px); }
