--- a/index.html
+++ b/index.html
@@ -1680,6 +1680,10 @@
     .history-panel__header{ display:flex; flex-wrap:wrap; align-items:flex-start; justify-content:space-between; gap:.75rem; }
     .history-panel__title{ display:flex; flex-direction:column; gap:.35rem; }
     .history-panel__heading{ margin:0; font-size:1.2rem; font-weight:600; color:#0f172a; }
+    .history-panel__heading-select{ position:relative; display:inline-flex; align-items:center; margin-left:.35rem; }
+    .history-panel__heading-select select{ appearance:none; -webkit-appearance:none; -moz-appearance:none; border:1px solid rgba(148,163,184,0.55); border-radius:.75rem; background:#fff; padding:.25rem 1.85rem .25rem .75rem; font-size:1rem; font-weight:600; color:#0f172a; box-shadow:0 1px 2px rgba(15,23,42,0.08); }
+    .history-panel__heading-select::after{ content:"\25BE"; position:absolute; right:.65rem; font-size:.75rem; color:#475569; pointer-events:none; }
+    .history-panel__heading-select select:focus{ outline:2px solid rgba(37,99,235,0.35); outline-offset:2px; border-color:rgba(37,99,235,0.55); }
     .history-panel__subtitle{ margin:0; font-size:.85rem; color:#475569; }
     .history-panel__actions{ display:flex; flex-wrap:wrap; align-items:center; gap:.5rem; }
     .history-panel__range{ display:flex; align-items:center; gap:.45rem; padding:.2rem .6rem; border-radius:.75rem; background:rgba(148,163,184,0.12); font-size:.75rem; color:#475569; font-weight:500; }
