--- a/index.html
+++ b/index.html
@@ -1755,7 +1755,7 @@
     .history-panel__item[data-summary-scope="weekly"] .history-panel__note{ color:#5b21b6; }
     .history-panel__note-text{ display:block; }
     .history-panel__empty{ margin:0; padding:1rem; border-radius:.9rem; border:1px dashed rgba(148,163,184,0.45); background:#f8fafc; color:#64748b; font-size:.9rem; text-align:center; }
-    .history-panel__chart{ margin:0 0 1.25rem; padding:1.25rem; border-radius:1rem; border:1px solid rgba(148,163,184,0.2); background:linear-gradient(180deg, rgba(241,245,249,0.55), rgba(255,255,255,0.9)); box-shadow:0 12px 24px rgba(15,23,42,0.08); display:flex; flex-direction:column; gap:.75rem; position:relative; overflow:visible; }
+    .history-panel__chart{ margin:0 0 1.25rem; padding:1.1rem; border-radius:.9rem; border:1px solid #e2e8f0; background:#fff; box-shadow:0 10px 22px rgba(15,23,42,0.05); display:flex; flex-direction:column; gap:.9rem; position:relative; overflow:visible; }
     .history-panel__chart[data-average-status="ok-strong"]{ border-color:rgba(22,163,74,0.32); box-shadow:0 14px 28px rgba(22,163,74,0.14); }
     .history-panel__chart[data-average-status="ok-soft"]{ border-color:rgba(74,222,128,0.3); box-shadow:0 14px 28px rgba(74,222,128,0.14); }
     .history-panel__chart[data-average-status="mid"]{ border-color:rgba(234,179,8,0.3); box-shadow:0 14px 28px rgba(234,179,8,0.14); }
@@ -1781,6 +1781,10 @@
     .history-panel__chart-scale-label::after{ content:""; position:absolute; right:0; top:50%; width:.75rem; height:1px; background:rgba(148,163,184,0.45); transform:translateY(-50%); }
     .history-panel__chart-canvas{ flex:1; width:100%; display:block; position:relative; aspect-ratio:calc(var(--history-chart-width) / var(--history-chart-height)); }
     .history-panel__chart svg{ width:100%; height:100%; display:block; }
+    .history-panel__chart-grid{ pointer-events:none; }
+    .history-panel__chart-grid-line{ stroke-linecap:round; }
+    .history-panel__chart-grid-line--horizontal{ opacity:.9; }
+    .history-panel__chart-grid-line--vertical{ opacity:.9; }
     @supports not (aspect-ratio: 1){
       .history-panel__chart-canvas{ aspect-ratio:auto; }
       .history-panel__chart-canvas::before{ content:""; display:block; padding-top:calc(var(--history-chart-height) / var(--history-chart-width) * 100%); }
@@ -1811,7 +1815,7 @@
     .history-panel__chart-tooltip-meta{ font-size:.72rem; opacity:.85; margin-top:.25rem; }
     .history-panel__chart-axis{ position:relative; min-height:3rem; padding-top:.75rem; font-size:.7rem; color:#475569; }
     .history-panel__chart-axis[data-has-scale]{ margin-left:calc(clamp(3.5rem, 32vw, 5rem) + clamp(.5rem, 2vw, .75rem)); }
-    .history-panel__chart-axis-track{ position:absolute; left:0; right:0; bottom:.85rem; height:1px; background:rgba(148,163,184,0.35); }
+    .history-panel__chart-axis-track{ position:absolute; left:0; right:0; bottom:.85rem; height:1px; background:rgba(100,116,139,0.28); }
     .history-panel__chart-axis-marker{ position:absolute; bottom:.2rem; display:flex; flex-direction:column; align-items:center; gap:.25rem; transform:translateX(-50%); pointer-events:none; text-transform:uppercase; letter-spacing:.08em; max-width:min(6.5rem,30vw); }
     .history-panel__chart-axis-marker--start{ transform:translateX(0); align-items:flex-start; }
     .history-panel__chart-axis-marker--end{ transform:translateX(-100%); align-items:flex-end; }
