--- a/index.html
+++ b/index.html
@@ -1755,65 +1755,59 @@
     .history-panel__item[data-summary-scope="weekly"] .history-panel__note{ color:#5b21b6; }
     .history-panel__note-text{ display:block; }
     .history-panel__empty{ margin:0; padding:1rem; border-radius:.9rem; border:1px dashed rgba(148,163,184,0.45); background:#f8fafc; color:#64748b; font-size:.9rem; text-align:center; }
-    .history-panel__chart{ margin:0 0 1.75rem; padding:1.6rem 1.8rem; border-radius:1.2rem; border:1px solid rgba(148,163,184,0.18); background:linear-gradient(135deg, rgba(37,99,235,0.08), rgba(59,130,246,0.04) 32%, rgba(15,23,42,0.04) 100%); box-shadow:0 18px 40px rgba(15,23,42,0.08); display:flex; flex-direction:column; gap:1.75rem; position:relative; overflow:visible; backdrop-filter:blur(6px); }
-    .history-panel__chart::after{ content:""; position:absolute; inset:18px; border-radius:.95rem; pointer-events:none; border:1px solid rgba(255,255,255,0.3); opacity:.6; }
-    .history-panel__chart[data-average-status="ok-strong"]{ border-color:rgba(34,197,94,0.35); box-shadow:0 18px 44px rgba(22,163,74,0.18); background:linear-gradient(135deg, rgba(34,197,94,0.12), rgba(34,197,94,0.03) 40%, rgba(15,23,42,0.04)); }
-    .history-panel__chart[data-average-status="ok-soft"]{ border-color:rgba(74,222,128,0.35); box-shadow:0 18px 44px rgba(74,222,128,0.15); background:linear-gradient(135deg, rgba(74,222,128,0.12), rgba(59,130,246,0.03) 45%, rgba(15,23,42,0.04)); }
-    .history-panel__chart[data-average-status="mid"]{ border-color:rgba(234,179,8,0.35); box-shadow:0 18px 44px rgba(234,179,8,0.14); background:linear-gradient(135deg, rgba(234,179,8,0.14), rgba(251,191,36,0.05) 42%, rgba(15,23,42,0.04)); }
-    .history-panel__chart[data-average-status="ko-soft"]{ border-color:rgba(248,113,113,0.38); box-shadow:0 18px 44px rgba(248,113,113,0.18); background:linear-gradient(135deg, rgba(248,113,113,0.12), rgba(248,113,113,0.04) 45%, rgba(15,23,42,0.04)); }
-    .history-panel__chart[data-average-status="ko-strong"]{ border-color:rgba(220,38,38,0.42); box-shadow:0 18px 50px rgba(220,38,38,0.22); background:linear-gradient(135deg, rgba(220,38,38,0.14), rgba(220,38,38,0.05) 45%, rgba(15,23,42,0.04)); }
+    .history-panel__chart{ margin:0 0 1.75rem; padding:clamp(1.25rem, 4vw, 1.85rem); border-radius:1.25rem; border:1px solid rgba(148,163,184,0.24); background:linear-gradient(180deg, rgba(255,255,255,0.96), rgba(241,245,249,0.92)); box-shadow:0 18px 40px rgba(15,23,42,0.08); display:flex; flex-direction:column; gap:clamp(1.25rem, 4vw, 1.85rem); position:relative; overflow:hidden; }
+    .history-panel__chart::before{ content:""; position:absolute; inset:-45% -20% 30% -20%; background:radial-gradient(circle at 15% 10%, rgba(59,130,246,0.14), transparent 60%), radial-gradient(circle at 85% -10%, rgba(14,165,233,0.16), transparent 55%); opacity:.65; pointer-events:none; }
+    .history-panel__chart > *{ position:relative; z-index:1; }
+    .history-panel__chart[data-average-status="ok-strong"]{ border-color:rgba(34,197,94,0.35); box-shadow:0 18px 44px rgba(22,163,74,0.18); background:linear-gradient(180deg, rgba(240,253,244,0.96), rgba(220,252,231,0.9)); }
+    .history-panel__chart[data-average-status="ok-soft"]{ border-color:rgba(74,222,128,0.35); box-shadow:0 18px 44px rgba(74,222,128,0.15); background:linear-gradient(180deg, rgba(236,253,245,0.96), rgba(217,249,233,0.9)); }
+    .history-panel__chart[data-average-status="mid"]{ border-color:rgba(234,179,8,0.35); box-shadow:0 18px 44px rgba(234,179,8,0.14); background:linear-gradient(180deg, rgba(255,251,235,0.96), rgba(254,240,199,0.9)); }
+    .history-panel__chart[data-average-status="ko-soft"]{ border-color:rgba(248,113,113,0.38); box-shadow:0 18px 44px rgba(248,113,113,0.18); background:linear-gradient(180deg, rgba(254,242,242,0.96), rgba(254,226,226,0.92)); }
+    .history-panel__chart[data-average-status="ko-strong"]{ border-color:rgba(220,38,38,0.42); box-shadow:0 18px 50px rgba(220,38,38,0.22); background:linear-gradient(180deg, rgba(254,226,226,0.96), rgba(254,202,202,0.9)); }
     .history-panel__chart[data-average-status="note"]{ border-color:rgba(59,130,246,0.32); box-shadow:0 18px 44px rgba(59,130,246,0.16); }
     .history-panel__chart[data-average-status="na"]{ border-color:rgba(148,163,184,0.32); box-shadow:0 18px 40px rgba(148,163,184,0.16); }
-    .history-panel__chart-header{ display:flex; align-items:flex-start; justify-content:space-between; gap:1rem 1.5rem; flex-wrap:wrap; position:relative; z-index:1; }
-    .history-panel__chart-heading{ display:flex; flex-direction:column; gap:.35rem; }
-    .history-panel__chart-eyebrow{ margin:0; font-size:.68rem; letter-spacing:.18em; text-transform:uppercase; color:#2563eb; font-weight:700; opacity:.85; }
+    .history-panel__chart-header{ display:flex; flex-direction:column; gap:.45rem; }
+    .history-panel__chart-eyebrow{ margin:0; font-size:.68rem; letter-spacing:.22em; text-transform:uppercase; color:#2563eb; font-weight:700; opacity:.8; }
     .history-panel__chart[data-average-status^="ok-"] .history-panel__chart-eyebrow{ color:#15803d; }
     .history-panel__chart[data-average-status="mid"] .history-panel__chart-eyebrow{ color:#b45309; }
     .history-panel__chart[data-average-status^="ko-"] .history-panel__chart-eyebrow{ color:#b91c1c; }
     .history-panel__chart[data-average-status="na"] .history-panel__chart-eyebrow{ color:#475569; }
-    .history-panel__chart-title{ margin:0; font-size:1.28rem; font-weight:700; color:#0f172a; letter-spacing:-0.01em; }
-    .history-panel__chart-stats{ display:grid; grid-template-columns:repeat(auto-fit, minmax(7.5rem, 1fr)); gap:.75rem; margin-left:auto; min-width:14rem; max-width:100%; }
-    .history-panel__chart-stat{ list-style:none; background:rgba(255,255,255,0.72); border:1px solid rgba(148,163,184,0.28); border-radius:.95rem; padding:.7rem .9rem; display:flex; flex-direction:column; gap:.2rem; box-shadow:0 10px 26px rgba(15,23,42,0.12); transition:transform .2s ease, box-shadow .2s ease, border-color .2s ease; min-width:0; backdrop-filter:blur(8px); }
-    .history-panel__chart-stat:hover{ transform:translateY(-3px); box-shadow:0 16px 32px rgba(15,23,42,0.18); }
-    .history-panel__chart-stat-label{ font-size:.7rem; text-transform:uppercase; letter-spacing:.08em; font-weight:600; color:#64748b; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
-    .history-panel__chart-stat-value{ font-size:1rem; font-weight:700; color:#0f172a; line-height:1.35; }
-    .history-panel__chart-stat--accent{ border-color:rgba(37,99,235,0.45); box-shadow:0 16px 32px rgba(37,99,235,0.18); }
-    .history-panel__chart[data-average-status^="ok-"] .history-panel__chart-stat--accent{ border-color:rgba(22,163,74,0.45); box-shadow:0 16px 32px rgba(22,163,74,0.18); }
-    .history-panel__chart[data-average-status^="ko-"] .history-panel__chart-stat--accent{ border-color:rgba(220,38,38,0.5); box-shadow:0 16px 36px rgba(220,38,38,0.22); }
-    .history-panel__chart-stat--accent .history-panel__chart-stat-value{ color:#1d4ed8; }
-    .history-panel__chart[data-average-status^="ok-"] .history-panel__chart-stat--accent .history-panel__chart-stat-value{ color:#15803d; }
-    .history-panel__chart[data-average-status^="ko-"] .history-panel__chart-stat--accent .history-panel__chart-stat-value{ color:#b91c1c; }
-    .history-panel__chart-body{ display:flex; flex-direction:column; gap:1.5rem; position:relative; z-index:1; }
-    .history-panel__chart-figure{ margin:0; position:relative; --history-chart-width:640px; --history-chart-height:220px; --history-chart-padding-top:32px; --history-chart-padding-right:36px; --history-chart-padding-bottom:40px; --history-chart-padding-left:40px; }
+    .history-panel__chart-title{ margin:0; font-size:clamp(1.1rem, 2.6vw, 1.35rem); font-weight:700; color:#0f172a; letter-spacing:-0.01em; }
+    .history-panel__chart-summary{ margin:0; font-size:.82rem; color:#475569; font-weight:600; letter-spacing:0.01em; line-height:1.35; }
+    .history-panel__chart-body{ display:flex; flex-direction:column; gap:1.65rem; position:relative; z-index:1; }
+    .history-panel__chart-figure{ margin:0; position:relative; --history-chart-width:640px; --history-chart-height:240px; --history-chart-padding-top:34px; --history-chart-padding-right:36px; --history-chart-padding-bottom:44px; --history-chart-padding-left:40px; }
     .history-panel__chart-figure--with-scale{ display:flex; align-items:stretch; gap:clamp(.75rem, 3vw, 1.25rem); }
     .history-panel__chart-scale{ position:relative; display:block; width:clamp(3.8rem, 32vw, 5.8rem); min-width:clamp(3.8rem, 32vw, 5.8rem); padding:calc(var(--history-chart-padding-top) / var(--history-chart-height) * 100%) 0 calc(var(--history-chart-padding-bottom) / var(--history-chart-height) * 100%); font-size:clamp(.64rem, 2.6vw, .75rem); color:#475569; letter-spacing:0; overflow:visible; }
     .history-panel__chart-scale-label{ position:absolute; right:.2rem; top:calc((1 - var(--history-chart-scale-position, 0)) * 100%); transform:translateY(-50%); padding-right:1rem; text-align:right; font-weight:600; display:flex; align-items:center; justify-content:flex-end; line-height:1.2; width:100%; }
     .history-panel__chart-scale-label[data-scale-anchor="top"]{ top:0; transform:translateY(0); }
     .history-panel__chart-scale-label[data-scale-anchor="bottom"]{ top:100%; transform:translateY(-100%); }
     .history-panel__chart-scale-label::after{ content:""; position:absolute; right:.15rem; top:50%; width:.85rem; height:1px; background:rgba(148,163,184,0.4); transform:translateY(-50%); }
-    .history-panel__chart-canvas{ flex:1; width:100%; display:block; position:relative; aspect-ratio:calc(var(--history-chart-width) / var(--history-chart-height)); background:linear-gradient(180deg, rgba(248,250,252,0.6), rgba(248,250,252,0.15) 55%, rgba(255,255,255,0.9)); border-radius:1rem; border:1px solid rgba(226,232,240,0.7); overflow:hidden; box-shadow:inset 0 1px 0 rgba(255,255,255,0.9); }
+    .history-panel__chart-canvas{ flex:1; width:100%; display:block; position:relative; aspect-ratio:calc(var(--history-chart-width) / var(--history-chart-height)); background:linear-gradient(180deg, rgba(248,250,252,0.85), rgba(248,250,252,0.35) 55%, rgba(255,255,255,0.95)); border-radius:1rem; border:1px solid rgba(226,232,240,0.8); overflow:hidden; box-shadow:inset 0 1px 0 rgba(255,255,255,0.85); }
     .history-panel__chart svg{ width:100%; height:100%; display:block; }
     .history-panel__chart-area{ opacity:.9; transition:opacity .2s ease; }
     .history-panel__chart:hover .history-panel__chart-area{ opacity:1; }
-    .history-panel__chart-line{ stroke-width:4; stroke-linecap:round; stroke-linejoin:round; filter:drop-shadow(0 8px 20px rgba(37,99,235,0.18)); }
+    .history-panel__chart-line{ stroke-width:4; stroke-linecap:round; stroke-linejoin:round; filter:drop-shadow(0 10px 24px rgba(37,99,235,0.14)); }
+    @media (max-width: 900px){
+      .history-panel__chart{ padding:clamp(1.1rem, 3.6vw, 1.6rem); gap:clamp(1.2rem, 4vw, 1.7rem); }
+      .history-panel__chart-title{ font-size:clamp(1.05rem, 3.8vw, 1.25rem); }
+      .history-panel__chart-summary{ font-size:.78rem; }
+      .history-panel__chart-figure{ --history-chart-padding-left:32px; --history-chart-padding-right:32px; --history-chart-padding-bottom:40px; }
+    }
     @media (max-width: 720px){
-      .history-panel__chart{ padding:1.35rem 1.4rem; gap:1.5rem; }
-      .history-panel__chart::after{ inset:14px; }
-      .history-panel__chart-title{ font-size:1.18rem; }
-      .history-panel__chart-stats{ width:100%; margin-left:0; }
-      .history-panel__chart-figure{ --history-chart-padding-right:28px; --history-chart-padding-left:28px; --history-chart-padding-bottom:36px; }
+      .history-panel__chart{ padding:clamp(1.3rem, 5vw, 1.75rem); gap:clamp(1.4rem, 5vw, 2rem); }
+      .history-panel__chart-header{ align-items:center; text-align:center; }
+      .history-panel__chart-summary{ font-size:.85rem; }
+      .history-panel__chart-figure{ --history-chart-padding-left:28px; --history-chart-padding-right:28px; --history-chart-padding-top:32px; --history-chart-padding-bottom:46px; }
     }
     @media (max-width: 640px){
+      .history-panel__chart-figure{ --history-chart-padding-left:26px; --history-chart-padding-right:26px; }
       .history-panel__chart-canvas{ aspect-ratio:auto; }
       .history-panel__chart-canvas::before{ content:""; display:block; padding-top:calc(var(--history-chart-height) / var(--history-chart-width) * 100%); }
       .history-panel__chart-canvas > svg{ position:absolute; inset:0; }
-      .history-panel__chart-stats{ grid-template-columns:repeat(auto-fit, minmax(8rem, 1fr)); }
     }
-    @media (max-width: 480px){
-      .history-panel__chart-header{ flex-direction:column; align-items:stretch; }
-      .history-panel__chart-stats{ width:100%; }
-      .history-panel__chart::after{ inset:12px; }
-      .history-panel__chart-figure{ --history-chart-padding-left:22px; --history-chart-padding-right:22px; --history-chart-padding-bottom:32px; }
+    @media (max-width: 500px){
+      .history-panel__chart{ padding:clamp(1.35rem, 7vw, 1.9rem); gap:clamp(1.55rem, 7vw, 2.15rem); }
+      .history-panel__chart-summary{ font-size:.9rem; }
+      .history-panel__chart-figure{ --history-chart-padding-left:22px; --history-chart-padding-right:22px; --history-chart-padding-top:30px; --history-chart-padding-bottom:52px; }
     }
     .history-panel__chart-point{ --history-point-color:#2563eb; outline:none; cursor:default; transition:transform .2s ease; }
     .history-panel__chart-point-hit{ fill:var(--history-point-color); opacity:0; transition:opacity .2s ease; pointer-events:all; }
