Ajuster le graphique mobile et retirer les stats

--- a/index.html
+++ b/index.html
@@ -1810,7 +1810,7 @@
     }
     @media (max-width: 500px){
       .history-panel__chart{ padding:clamp(1.35rem, 7vw, 1.8rem); border-radius:1.4rem; }
-      .history-chart{ min-height:260px; border-radius:1.1rem; }
+      .history-chart{ min-height:clamp(320px, 66vh, 620px); border-radius:1.1rem; }
     }
 
 
