--- a/index.html
+++ b/index.html
@@ -1767,7 +1767,7 @@
     .history-panel__chart[data-average-status="note"]{ border-color:rgba(59,130,246,0.32); box-shadow:0 22px 48px rgba(59,130,246,0.18); }
     .history-panel__chart[data-average-status="na"]{ border-color:rgba(148,163,184,0.28); box-shadow:0 20px 44px rgba(148,163,184,0.18); }
     .history-panel__chart--simple{ display:flex; flex-direction:column; gap:clamp(1.75rem, 4vw, 2.75rem); }
-    .history-chart{ margin:0; position:relative; width:100%; min-height:clamp(280px, 52vh, 420px); border-radius:1.35rem; background:linear-gradient(180deg, rgba(248,250,252,0.92), rgba(241,245,249,0.72)); border:1px solid rgba(226,232,240,0.85); box-shadow:inset 0 1px 0 rgba(255,255,255,0.9); overflow:hidden; }
+    .history-chart{ margin:0; position:relative; width:100%; min-height:clamp(300px, 60vh, 480px); border-radius:1.35rem; background:linear-gradient(180deg, rgba(248,250,252,0.92), rgba(241,245,249,0.72)); border:1px solid rgba(226,232,240,0.85); box-shadow:inset 0 1px 0 rgba(255,255,255,0.9); overflow:hidden; }
     .history-chart__svg{ width:100%; height:100%; display:block; }
     .history-chart__surface{ fill:rgba(255,255,255,0.4); stroke:rgba(148,163,184,0.22); }
     .history-chart__grid-line{ stroke:rgba(148,163,184,0.2); stroke-width:1; shape-rendering:crispEdges; }
@@ -1802,15 +1802,16 @@
     .history-panel__chart-empty-text{ margin:0; font-size:.92rem; color:#475569; max-width:28rem; }
     @media (max-width: 900px){
       .history-panel__chart{ padding:clamp(1.5rem, 5vw, 2.2rem); gap:clamp(1.5rem, 5vw, 2.4rem); }
-      .history-chart{ min-height:clamp(240px, 48vh, 360px); }
+      .history-chart{ min-height:clamp(300px, 62vh, 500px); }
     }
     @media (max-width: 640px){
+      .history-panel__body{ max-height:82vh; }
       .history-chart__stats{ grid-template-columns:repeat(auto-fit, minmax(140px, 1fr)); }
       .history-chart__stat{ padding:.9rem 1rem; }
     }
     @media (max-width: 500px){
       .history-panel__chart{ padding:clamp(1.35rem, 7vw, 1.8rem); border-radius:1.4rem; }
-      .history-chart{ min-height:clamp(320px, 66vh, 620px); border-radius:1.1rem; }
+      .history-chart{ min-height:clamp(360px, 76vh, 680px); border-radius:1.1rem; }
     }
 
 
