--- a/index.html
+++ b/index.html
@@ -1676,7 +1676,7 @@
     }
     .practice-editor__actions{ position:sticky; bottom:0; display:flex; justify-content:flex-end; gap:.5rem; padding:1rem 0 0; margin-top:1.25rem; border-top:1px solid #e2e8f0; background:linear-gradient(180deg,#ffffff 0%,#f8fafc 100%); }
 
-    .history-panel{ display:flex; flex-direction:column; gap:1rem; }
+    .history-panel{ position:relative; display:flex; flex-direction:column; gap:1rem; }
     .history-panel__header{ display:flex; flex-wrap:wrap; align-items:flex-start; justify-content:space-between; gap:.75rem; }
     .history-panel__title{ display:flex; flex-direction:column; gap:.35rem; }
     .history-panel__heading{ margin:0; font-size:1.2rem; font-weight:600; color:#0f172a; }
@@ -1760,7 +1760,7 @@
     .history-panel__note-text{ display:block; }
     .history-panel__empty{ margin:0; padding:1rem; border-radius:.9rem; border:1px dashed rgba(148,163,184,0.45); background:#f8fafc; color:#64748b; font-size:.9rem; text-align:center; }
 
-    .history-panel__chart{ margin:0 0 clamp(0.65rem, 2.5vw, 1.4rem); padding:clamp(1.75rem, 5vw, 2.6rem); border-radius:1.65rem; border:1px solid rgba(148,163,184,0.24); background:linear-gradient(180deg, rgba(255,255,255,0.98), rgba(226,232,240,0.92)); box-shadow:0 22px 48px rgba(15,23,42,0.12); position:relative; overflow:visible; display:flex; flex-direction:column; gap:clamp(1.75rem, 4vw, 2.75rem); }
+    .history-panel__chart{ margin:0 0 clamp(0.35rem, 1.8vw, 0.85rem); padding:clamp(1.75rem, 5vw, 2.6rem); border-radius:1.65rem; border:1px solid rgba(148,163,184,0.24); background:linear-gradient(180deg, rgba(255,255,255,0.98), rgba(226,232,240,0.92)); box-shadow:0 22px 48px rgba(15,23,42,0.12); position:relative; overflow:visible; display:flex; flex-direction:column; gap:clamp(1.75rem, 4vw, 2.75rem); }
     .history-panel__chart::before{ content:""; position:absolute; inset:-35% -10% -15% -10%; background:radial-gradient(circle at 12% 12%, rgba(37,99,235,0.18), transparent 62%), radial-gradient(circle at 88% 0%, rgba(59,130,246,0.16), transparent 55%); opacity:.55; pointer-events:none; }
     .history-panel__chart > *{ position:relative; z-index:1; }
     .history-panel__chart[data-average-status="ok-strong"]{ border-color:rgba(34,197,94,0.38); box-shadow:0 22px 48px rgba(22,163,74,0.22); background:linear-gradient(180deg, rgba(236,253,245,0.98), rgba(209,250,229,0.9)); }
@@ -1802,10 +1802,13 @@
     .history-chart__stat dt{ margin:0; font-size:.72rem; letter-spacing:.08em; text-transform:uppercase; color:#64748b; font-weight:700; }
     .history-chart__stat dd{ margin:0; font-size:clamp(1.05rem, 2.2vw, 1.3rem); font-weight:700; color:#0f172a; }
     .history-panel__chart--empty{ align-items:center; justify-content:center; text-align:center; padding:2.2rem 1.5rem; min-height:240px; }
+    .history-panel__edit-overlay{ position:absolute; inset:0; background:rgba(15,23,42,0.35); display:flex; align-items:center; justify-content:center; padding:clamp(1rem, 4vw, 2rem); z-index:30; }
+    .history-panel__edit-dialog{ width:min(560px, 92%); max-height:min(80vh, calc(100% - clamp(1.5rem, 4vw, 3rem))); overflow:auto; background:#fff; border-radius:1.15rem; border:1px solid rgba(148,163,184,0.32); box-shadow:0 20px 42px rgba(15,23,42,0.24); padding:clamp(1.4rem, 4vw, 1.9rem); outline:none; }
+    .history-panel__edit-dialog:focus{ outline:2px solid rgba(59,130,246,0.45); outline-offset:4px; }
     .history-panel__chart--empty::before{ opacity:.35; }
     .history-panel__chart-empty-text{ margin:0; font-size:.92rem; color:#475569; max-width:28rem; }
     @media (max-width: 900px){
-      .history-panel__chart{ margin-bottom:clamp(0.5rem, 2vw, 1rem); padding:clamp(1.5rem, 5vw, 2.2rem); gap:clamp(1.5rem, 5vw, 2.4rem); }
+      .history-panel__chart{ margin-bottom:clamp(0.3rem, 1.8vw, 0.8rem); padding:clamp(1.5rem, 5vw, 2.2rem); gap:clamp(1.5rem, 5vw, 2.4rem); }
       .history-chart{ min-height:clamp(300px, 62vh, 500px); }
     }
     @media (max-width: 640px){
@@ -1814,7 +1817,7 @@
       .history-chart__stat{ padding:.9rem 1rem; }
     }
     @media (max-width: 500px){
-      .history-panel__chart{ margin-bottom:clamp(0.4rem, 2.2vw, .85rem); padding:clamp(1.35rem, 7vw, 1.8rem); border-radius:1.4rem; }
+      .history-panel__chart{ margin-bottom:clamp(0.3rem, 2vw, .7rem); padding:clamp(1.35rem, 7vw, 1.8rem); border-radius:1.4rem; }
       .history-chart{ min-height:clamp(360px, 76vh, 680px); border-radius:1.1rem; }
     }
 
