--- a/index.html
+++ b/index.html
@@ -1760,7 +1760,7 @@
     .history-panel__note-text{ display:block; }
     .history-panel__empty{ margin:0; padding:1rem; border-radius:.9rem; border:1px dashed rgba(148,163,184,0.45); background:#f8fafc; color:#64748b; font-size:.9rem; text-align:center; }
 
-    .history-panel__chart{ margin:0 0 clamp(0.2rem, 0.8vw, 0.5rem); padding:clamp(1.6rem, 4.4vw, 2.3rem); border-radius:1.65rem; border:1px solid rgba(148,163,184,0.24); background:linear-gradient(180deg, rgba(255,255,255,0.98), rgba(226,232,240,0.92)); box-shadow:0 22px 48px rgba(15,23,42,0.12); position:relative; overflow:visible; display:flex; flex-direction:column; gap:clamp(1.35rem, 3.4vw, 2.2rem); }
+    .history-panel__chart{ margin:0; padding:clamp(1.35rem, 3.6vw, 1.95rem) clamp(1.55rem, 4vw, 2.2rem) clamp(0.5rem, 2vw, 1rem); border-radius:1.65rem; border:1px solid rgba(148,163,184,0.24); background:linear-gradient(180deg, rgba(255,255,255,0.98), rgba(226,232,240,0.92)); box-shadow:0 22px 48px rgba(15,23,42,0.12); position:relative; overflow:visible; display:flex; flex-direction:column; gap:clamp(1.35rem, 3.4vw, 2.2rem); min-height:0; }
     .history-panel__chart::before{ content:""; position:absolute; inset:-35% -10% -15% -10%; background:radial-gradient(circle at 12% 12%, rgba(37,99,235,0.18), transparent 62%), radial-gradient(circle at 88% 0%, rgba(59,130,246,0.16), transparent 55%); opacity:.55; pointer-events:none; }
     .history-panel__chart > *{ position:relative; z-index:1; }
     .history-panel__chart[data-average-status="ok-strong"]{ border-color:rgba(34,197,94,0.38); box-shadow:0 22px 48px rgba(22,163,74,0.22); background:linear-gradient(180deg, rgba(236,253,245,0.98), rgba(209,250,229,0.9)); }
@@ -1771,7 +1771,7 @@
     .history-panel__chart[data-average-status="note"]{ border-color:rgba(59,130,246,0.32); box-shadow:0 22px 48px rgba(59,130,246,0.18); }
     .history-panel__chart[data-average-status="na"]{ border-color:rgba(148,163,184,0.28); box-shadow:0 20px 44px rgba(148,163,184,0.18); }
     .history-panel__chart--simple{ display:flex; flex-direction:column; gap:clamp(1.75rem, 4vw, 2.75rem); }
-    .history-chart{ margin:0; position:relative; width:100%; min-height:clamp(300px, 60vh, 480px); border-radius:1.35rem; background:linear-gradient(180deg, rgba(248,250,252,0.92), rgba(241,245,249,0.72)); border:1px solid rgba(226,232,240,0.85); box-shadow:inset 0 1px 0 rgba(255,255,255,0.9); overflow:hidden; }
+    .history-chart{ margin:0; position:relative; width:100%; height:clamp(260px, 42vh, 320px); min-height:0; border-radius:1.35rem; background:linear-gradient(180deg, rgba(248,250,252,0.92), rgba(241,245,249,0.72)); border:1px solid rgba(226,232,240,0.85); box-shadow:inset 0 1px 0 rgba(255,255,255,0.9); overflow:hidden; }
     .history-chart__svg{ width:100%; height:100%; display:block; }
     .history-chart__surface{ fill:rgba(255,255,255,0.4); stroke:rgba(148,163,184,0.22); }
     .history-chart__grid-line{ stroke:rgba(148,163,184,0.2); stroke-width:1; shape-rendering:crispEdges; }
@@ -1801,15 +1801,15 @@
     .history-chart__stat{ padding:1rem 1.2rem; border-radius:1.1rem; background:rgba(248,250,252,0.65); border:1px solid rgba(226,232,240,0.7); box-shadow:inset 0 1px 0 rgba(255,255,255,0.9); display:flex; flex-direction:column; gap:.4rem; min-height:4.25rem; }
     .history-chart__stat dt{ margin:0; font-size:.72rem; letter-spacing:.08em; text-transform:uppercase; color:#64748b; font-weight:700; }
     .history-chart__stat dd{ margin:0; font-size:clamp(1.05rem, 2.2vw, 1.3rem); font-weight:700; color:#0f172a; }
-    .history-panel__chart--empty{ align-items:center; justify-content:center; text-align:center; padding:2.2rem 1.5rem; min-height:240px; }
+    .history-panel__chart--empty{ align-items:center; justify-content:center; text-align:center; padding:2rem 1.5rem; min-height:200px; }
     .history-panel__edit-overlay{ position:absolute; inset:0; background:rgba(15,23,42,0.35); display:flex; align-items:center; justify-content:center; padding:clamp(1rem, 4vw, 2rem); z-index:30; }
     .history-panel__edit-dialog{ width:min(560px, 92%); max-height:min(80vh, calc(100% - clamp(1.5rem, 4vw, 3rem))); overflow:auto; background:#fff; border-radius:1.15rem; border:1px solid rgba(148,163,184,0.32); box-shadow:0 20px 42px rgba(15,23,42,0.24); padding:clamp(1.4rem, 4vw, 1.9rem); outline:none; }
     .history-panel__edit-dialog:focus{ outline:2px solid rgba(59,130,246,0.45); outline-offset:4px; }
     .history-panel__chart--empty::before{ opacity:.35; }
     .history-panel__chart-empty-text{ margin:0; font-size:.92rem; color:#475569; max-width:28rem; }
     @media (max-width: 900px){
-      .history-panel__chart{ margin-bottom:clamp(0.2rem, 1vw, 0.45rem); padding:clamp(1.4rem, 4.6vw, 2.05rem); gap:clamp(1.2rem, 4.4vw, 2rem); }
-      .history-chart{ min-height:clamp(300px, 62vh, 500px); }
+      .history-panel__chart{ margin:0; padding:clamp(1.2rem, 4.6vw, 1.8rem) clamp(1.35rem, 4.8vw, 2rem) clamp(0.45rem, 2.2vw, 0.9rem); gap:clamp(1.1rem, 4.4vw, 1.8rem); }
+      .history-chart{ height:clamp(240px, 48vh, 300px); }
     }
     @media (max-width: 640px){
       .history-panel__body{ max-height:82vh; }
@@ -1817,8 +1817,8 @@
       .history-chart__stat{ padding:.9rem 1rem; }
     }
     @media (max-width: 500px){
-      .history-panel__chart{ margin-bottom:clamp(0.2rem, 1.2vw, .5rem); padding:clamp(1.25rem, 6vw, 1.7rem); border-radius:1.4rem; }
-      .history-chart{ min-height:clamp(360px, 76vh, 680px); border-radius:1.1rem; }
+      .history-panel__chart{ margin:0; padding:clamp(1.1rem, 5.5vw, 1.6rem) clamp(1.2rem, 5.6vw, 1.85rem) clamp(0.4rem, 2.5vw, 0.8rem); border-radius:1.4rem; }
+      .history-chart{ height:clamp(220px, 52vh, 280px); border-radius:1.1rem; }
     }
 
 
