--- a/index.html
+++ b/index.html
@@ -1820,7 +1820,7 @@
     @media (max-width: 640px){
       .history-panel__body{ max-height:82vh; }
       .history-panel__chart-scroll{ margin-right:-.8rem; margin-left:-.8rem; padding-left:.8rem; padding-right:.8rem; }
-      .history-panel__chart-scroll > .history-chart{ width:max(100%, 720px); }
+      .history-panel__chart-scroll > .history-chart{ width:max(100%, clamp(520px, 135vw, 680px)); }
       .history-chart{ height:clamp(300px, 60vh, 360px); }
       .history-chart__stats{ grid-template-columns:repeat(auto-fit, minmax(140px, 1fr)); }
       .history-chart__stat{ padding:.9rem 1rem; }
@@ -1830,7 +1830,7 @@
     @media (max-width: 500px){
       .history-panel__chart{ margin:0; padding:clamp(1.1rem, 5.5vw, 1.6rem) clamp(1.2rem, 5.6vw, 1.85rem) clamp(0.4rem, 2.5vw, 0.8rem); border-radius:1.4rem; }
       .history-panel__chart-scroll{ margin-right:-1rem; margin-left:-1rem; padding-left:1rem; padding-right:1rem; }
-      .history-panel__chart-scroll > .history-chart{ width:max(100%, 780px); }
+      .history-panel__chart-scroll > .history-chart{ width:max(100%, clamp(460px, 150vw, 600px)); }
       .history-chart{ height:clamp(320px, 64vh, 380px); border-radius:1.1rem; }
       .history-panel__item{ padding:.7rem .75rem; }
     }
