--- a/index.html
+++ b/index.html
@@ -1828,8 +1828,8 @@
       .history-panel__item{ padding:.75rem .8rem; gap:.35rem; }
     }
     @media (max-width: 500px){
-      .history-panel__chart{ margin:0; padding:clamp(1.1rem, 5.5vw, 1.6rem) clamp(1.2rem, 5.6vw, 1.85rem) clamp(0.4rem, 2.5vw, 0.8rem); border-radius:1.4rem; }
-      .history-panel__chart-scroll{ margin-right:-1rem; margin-left:-1rem; padding-left:1rem; padding-right:1rem; }
+      .history-panel__chart{ margin:0; padding:0 clamp(1.2rem, 5.6vw, 1.85rem) 0; border-radius:1.4rem; }
+      .history-panel__chart-scroll{ margin-right:-1rem; margin-left:-1rem; padding-left:1rem; padding-right:1rem; padding-bottom:0; margin-bottom:0; }
       .history-panel__chart-scroll > .history-chart{ width:max(100%, clamp(460px, 150vw, 600px)); }
       .history-chart{ height:clamp(320px, 64vh, 380px); border-radius:1.1rem; }
       .history-panel__item{ padding:.7rem .75rem; }
