--- a/index.html
+++ b/index.html
@@ -1948,6 +1948,7 @@
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-messaging-compat.js"></script>
+  <script src="./utils/dates.js"></script>
   <script src="schema.js"></script>
   <script src="modes.js"></script>
   <script src="goals.js"></script>
