Colorer les réponses de checklist en bleu

--- a/index.html
+++ b/index.html
@@ -1288,6 +1288,9 @@
     .practice-editor__checklist-option{ display:flex; align-items:flex-start; gap:.55rem; border:1px solid #E2E8F0; border-radius:.75rem; background:#F8FAFC; padding:.5rem .65rem; font-size:.9rem; color:#1f2937; }
     .practice-editor__checklist-option input[type="checkbox"]{ width:1rem; height:1rem; margin-top:.15rem; }
     .practice-editor__checklist-option span{ flex:1 1 auto; }
+    .practice-editor__checklist-option.is-checked{ border-color:#3b82f6; background:rgba(59,130,246,0.12); color:#1d4ed8; }
+    .practice-editor__checklist-option.is-checked span{ color:inherit; }
+    .practice-editor__checklist-option.is-checked input[type="checkbox"]{ accent-color:#2563eb; }
     .practice-editor__checklist-option--archived{ opacity:.7; font-style:italic; }
     .practice-editor__checklist-empty{ font-size:.85rem; color:#64748b; margin:0; }
     .consigne-rich-text{ display:flex; flex-direction:column; gap:.5rem; }
