Ensure checklist response pulse uses blue accent

--- a/index.html
+++ b/index.html
@@ -569,6 +569,12 @@
       }
     }
     .consigne-row--updated {
+      --consigne-status-bg:rgba(62,166,235,.18);
+      --consigne-status-border:rgba(62,166,235,.35);
+      --consigne-status-text:#1d4ed8;
+      --consigne-status-accent:#1d4ed8;
+      --consigne-status-color:#3ea6eb;
+      --consigne-status-dot-shadow:rgba(62,166,235,.28);
       animation:consigne-row-updated-pulse .9s ease-out;
     }
     .consigne-row {
